2018-07-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-imap, sqwebmail: update Courier-IMAP to support UTF8 IMAP.
	Convert maildir folders to use UTF-8 for folder names. Add
	--checkutf8 and --convutf8 options to maildirmake to convert
	pre-UTF8 maildirs to UTF8 maildirs, a mandatory upgrade procedure.

2018-07-08  Sam Varshavchik  <mrsam@courier-mta.com>

	* waitlib/configure.ac: Fix typo.

2018-06-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/tcpd/starttls.c (main): Add -user option. Additional fixes
	to startup script to have couriertls drop root privileges.

2018-06-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/tcpd/tlsclient.h: add username option, used in couriertls_start
	to set the child process's uid and gid.

	* imaplogin.c (starttls): Set username option for couriertls

	* pop3login.c (starttls): Set username option for couriertls

	* imapd-ssl.dist, pop3d-ssl.dist: Use separate imap and pop3 session
	cache files. Startup script: remove/set ownership and permsission
	on the imap and pop3 session cache files.

2018-02-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/tcpd/libcouriergnutls.c: Remove usage of deprecated OpenPGP
	API. Tag the "Unexpected SSL connection shutdown" with the "DEBUG"
	label just like the OpenSSL version does.

	* libs/tcpd/starttls.c: If TCPREMOTEIP is set, prepend it to error
	messages.

2017-11-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* Tweak RPM spec file.

4.18.2

2017-09-27  Giovanni Bechis <giovanni@paclan.it>

	* Fix to configure.ac

2017-09-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier: switch default header encoding to UTF-8.

4.18.1

2017-08-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* OpenSSL 1.1.0 compilation fixes.

4.18.0

2017-06-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/maildir/maildirquota.c (docheckquota): Skip DT_LNK.

2017-03-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-unicode library API update.
